<resources>
    <string name="app_name">101:Подсчёт карт</string>
    <string name="ver">ver. 1.1</string>
    <string name="info">Developed by Alexeev Alexey</string>

    <string name="count_score">Подсчитать очки</string>
    <string name="clear">Новая игра</string>

    <string name="welcome_text">Добро пожаловать в программу Подсчёт очков игры 101!    Для начала игры выберите кол-во участников:</string>
    <string name="win_text">Поздравляю!   Победитель:</string>

    <string name="two_player">Два\nигрока</string>
    <string name="three_player">Три\nигрока</string>
    <string name="four_player">Четыре\nигрока</string>
    <string name="five_player">Пять\nигроков</string>
    <string name="game_rules">Правила игры</string>

    <string name="two_game_title">101: игра для двоих</string>
    <string name="three_game_title">101: игра для троих</string>
    <string name="four_game_title">101: игра для четверых</string>
    <string name="five_game_title">101: игра для пятерых</string>

    <string name="input_name">В поля ниже введите имена игроков и нажмите \"Продолжить\"</string>
    <string name="info_player_1">Имя 1 игрока:</string>
    <string name="info_player_2">Имя 2 игрока:</string>
    <string name="info_player_3">Имя 3 игрока:</string>
    <string name="info_player_4">Имя 4 игрока:</string>
    <string name="info_player_5">Имя 5 игрока:</string>

    <string name="player_name_hint">Напиши имя</string>

    <string name="Next">Продолжить</string>
    <string name="Begin">В начало</string>
    <string name="GameRulesTitle">Правила игры</string>
    <string name="GameRulesFullList">
        Играют колодой карт из 36 карт.\n
        Сдаются карты по 4 каждому игроку, а сдатчику 3 (четвертую карту он кладёт на кон).\n
        Колода кладётся на середину стола.\n
        В первой игре первый ход достаётся сдатчику, а далее игроку, победившему в прошлой игре.\n
        Игроку после сдатчика нужно побить карту на коне. Ходят в данной игре по часовой стрелке.\n
        Следующий игрок может положить на неё карту той же масти или того же достоинства.\n
        Если у него нет требуемой карты, он может брать только одну карту, при этом он всё равно
        может использовать карту из своего арсенала — если же она не подошла, ход переходит к следующему игроку.\n
        Если карты в колоде кончаются, то со стопки открытых карт снимается верхняя и оставляется
        открытой на столе, остальные же переворачиваются и снова служат колодой.\n\n
        Специальные карты требуют после себя определённых действий от следующего игрока:\n\n
        6 — игрок, который походил, должен «покрыть» её — положить другую карту, соответствующую
        правилам (если нет подходящих — брать из колоды, пока не найдёт нужную).\n
        7 — следующий игрок должен взять 2 карты и пропустить ход.\n
        8 — следующий игрок должен взять 1 карту и пропустить ход.\n
        Туз — следующий игрок пропускает ход.\n
        Дама является козырем. Игрок, выложивший даму, может заказать любую масть. Следующий игрок,
        в этом случае, может положить карту только заказанной масти или даму (и заказать любую масть).\n
        Король пик - Следующий игрок должен взять 4 карты и пропустить ход.\n\n
        Цель одного кона игры заключается в том, чтобы избавиться от всех карт на руках. Выигрывает
        первый избавившийся от своих карт. Остальные считают очки на картах, оставшиеся у них на руках.\n\n
        Проигрывает тот, кто наберет в сумме более 101 очка.</string>
    <string name="GameRulesShortList">  Кратко:\n
                                        6 — необходимо «покрыть» самостоятельно.\n
                                        7 — следующий берёт 2 карты и пропускает.\n
                                        8 — следующий берёт 1 карту и пропускает.\n
                                        Туз — следующий пропускает.\n
                                        Дама — козырь.\n
                                        Король пик - следующий берёт 4 карты и пропускает.</string>
    <string name="PriceTitle">Очки за карты</string>
    <string name="PriceList">Очки начисляются по значению карты:\n
                                Шестёрка — 6 баллов,\n
                                Семёрка — 7 баллов,\n
                                Восьмёрка — 8 баллов,\n
                                Девятка — 9 баллов,\n
                                Десятка — 10 баллов,\n
                                Валет — 2 балла,\n
                                Дама — 3 балла,\n
                                Король — 4 балла,\n
                                Туз — 11 баллов,\n\n
                                Если остаётся только:\n
                                Дама Пик — 40 баллов,\n
                                Дама (не Пик) — 20 баллов,\n\n
                                Если игрок кладёт на кон последнюю:\n
                                Дама Пик — -40 баллов,\n
                                Дама (не Пик) — -20 баллов.\n
    </string>


    <string name="TOAST_INPUT_FIELDS">Заполните поля!</string>
    <string name="TOAST_TO_ZERO"> обнуляет результат!</string>
    <string name="total">Итого</string>
    <string name="DOUBLE_PRESS_BACK">Нажмите второй раз для выхода</string>
    <string name="WELCOME_EXIT">Выход: Может не надо?</string>
    <string name="WELCOME_YES">Надо, Федя, надо!</string>
    <string name="WELCOME_NO">Ладно, так и быть продолжим.</string>
    <string name="calc_btn">\.\.\.</string>


</resources>
