<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiveNameActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="15dp"
        android:theme="@style/Text_Alex"
        android:layout_height="wrap_content"
        android:text="@string/input_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Alex"
            android:text="@string/info_player_1"/>
        <EditText
            android:id="@+id/EditPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="10"
            android:hint="@string/player_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Alex"
            android:text="@string/info_player_2"/>
        <EditText
            android:id="@+id/EditPlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/player_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Alex"
            android:text="@string/info_player_3"/>
        <EditText
            android:id="@+id/EditPlayer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/player_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Alex"
            android:text="@string/info_player_4"/>
        <EditText
            android:id="@+id/EditPlayer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/player_name_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Alex"
            android:text="@string/info_player_5"/>
        <EditText
            android:id="@+id/EditPlayer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/player_name_hint"/>
    </LinearLayout>

    <Button
        android:layout_margin="15dp"
        android:theme="@style/Button_Alex"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:onClick="GoToCountFive"/>
    <Button
        android:layout_gravity="center"
        android:theme="@style/Button_Alex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Begin"
        android:onClick="GoToBegin"/>

</LinearLayout>

    </ScrollView>