<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gusssar.alexeev.podschet_kart_2.WelcomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <Button
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorBackground"
            android:id="@+id/StartGameTwo"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/two_player"
            android:layout_weight="1"
            android:onClick="GoToGameTwo"

            />
        <Button
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorBackground"
            android:id="@+id/StartGameThree"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three_player"
            android:layout_weight="1"
            android:onClick="GoToGameThree"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <Button
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorBackground"
            android:id="@+id/StartGameFour"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four_player"
            android:layout_weight="1"
            android:onClick="GoToGameFour"
            />
        <Button
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorBackground"
            android:id="@+id/StartGameFive"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_player"
            android:layout_weight="1"
            android:onClick="GoToGameFive"
            />

    </LinearLayout>
</LinearLayout>