<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThreeGameActivity">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="7dp"
        android:layout_margin="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Text_Alex"
            android:text="@string/three_game_title">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TextNamePlayer1"
            android:theme="@style/Text_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        </TextView>

        <EditText
            android:id="@+id/score_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned">

        </EditText>
        <Button
            android:id="@+id/btn_calc_1"
            android:theme="@style/Button_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_btn"
            android:onClick="GoToCalc1"
            android:textSize="11dp">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TextNamePlayer2"
            android:theme="@style/Text_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        </TextView>
        <EditText
            android:id="@+id/score_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned">
        </EditText>
        <Button
            android:id="@+id/btn_calc_2"
            android:theme="@style/Button_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_btn"
            android:onClick="GoToCalc2"
            android:textSize="11dp">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/TextNamePlayer3"
            android:theme="@style/Text_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        </TextView>
        <EditText
            android:id="@+id/score_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberSigned">
        </EditText>
        <Button
            android:id="@+id/btn_calc_3"
            android:theme="@style/Button_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_btn"
            android:onClick="GoToCalc3"
            android:textSize="11dp">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:padding="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRun"
            android:theme="@style/Button_Alex"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_score"
            android:textSize="11dp">
        </Button>
        <Button
            android:id="@+id/btnClear"
            android:theme="@style/Button_Alex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:onClick="GoToBegin"
            android:textSize="11dp">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">
        <TextView
            android:id="@+id/TextSumPlayer1"
            android:theme="@style/Text_Name_Alex"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сумма МашиМашиМа"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:theme="@style/Text_Score_Alex"
            android:id="@+id/out_score_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">
        <TextView
            android:id="@+id/TextSumPlayer2"
            android:theme="@style/Text_Name_Alex"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сумма Паши"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:theme="@style/Text_Score_Alex"
            android:id="@+id/out_score_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp">
        <TextView
            android:id="@+id/TextSumPlayer3"
            android:theme="@style/Text_Name_Alex"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сумма Леши"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:theme="@style/Text_Score_Alex"
            android:id="@+id/out_score_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonPrice"
        android:layout_margin="15dp"
        android:theme="@style/Button_Alex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="GoToGamePrice"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>